# pkg/api/v1/service.pb.gw.go
@@ -545,6 +545,40 @@ func local_request_ObjectTypes_Get_0(ctx context.Context, marshaler runtime.Mars
 
 }
 
+func request_RelationTypes_Create_0(ctx context.Context, marshaler runtime.Marshaler, client RelationTypesClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq RelationType
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.Create(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_RelationTypes_Create_0(ctx context.Context, marshaler runtime.Marshaler, server RelationTypesServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq RelationType
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.Create(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterObjectsHandlerServer registers the http handlers for service Objects to "mux".
 // UnaryRPC     :call ObjectsServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -742,6 +776,34 @@ func RegisterObjectTypesHandlerServer(ctx context.Context, mux *runtime.ServeMux
 		}
 
 		forward_ObjectTypes_Get_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	return nil
+}
+
+// RegisterRelationTypesHandlerServer registers the http handlers for service RelationTypes to "mux".
+// UnaryRPC     :call RelationTypesServer directly.
+// StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
+func RegisterRelationTypesHandlerServer(ctx context.Context, mux *runtime.ServeMux, server RelationTypesServer) error {
+
+	mux.Handle("POST", pattern_RelationTypes_Create_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_RelationTypes_Create_0(rctx, inboundMarshaler, server, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_RelationTypes_Create_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -1076,4 +1138,73 @@ var (
 	forward_ObjectTypes_List_0 = runtime.ForwardResponseMessage
 
 	forward_ObjectTypes_Get_0 = runtime.ForwardResponseMessage
+)
+
+// RegisterRelationTypesHandlerFromEndpoint is same as RegisterRelationTypesHandler but
+// automatically dials to "endpoint" and closes the connection when "ctx" gets done.
+func RegisterRelationTypesHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
+	conn, err := grpc.Dial(endpoint, opts...)
+	if err != nil {
+		return err
+	}
+	defer func() {
+		if err != nil {
+			if cerr := conn.Close(); cerr != nil {
+				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
+			}
+			return
+		}
+		go func() {
+			<-ctx.Done()
+			if cerr := conn.Close(); cerr != nil {
+				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
+			}
+		}()
+	}()
+
+	return RegisterRelationTypesHandler(ctx, mux, conn)
+}
+
+// RegisterRelationTypesHandler registers the http handlers for service RelationTypes to "mux".
+// The handlers forward requests to the grpc endpoint over "conn".
+func RegisterRelationTypesHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
+	return RegisterRelationTypesHandlerClient(ctx, mux, NewRelationTypesClient(conn))
+}
+
+// RegisterRelationTypesHandlerClient registers the http handlers for service RelationTypes
+// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "RelationTypesClient".
+// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "RelationTypesClient"
+// doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
+// "RelationTypesClient" to call the correct interceptors.
+func RegisterRelationTypesHandlerClient(ctx context.Context, mux *runtime.ServeMux, client RelationTypesClient) error {
+
+	mux.Handle("POST", pattern_RelationTypes_Create_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_RelationTypes_Create_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_RelationTypes_Create_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	return nil
+}
+
+var (
+	pattern_RelationTypes_Create_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "api", "relation_types"}, "", runtime.AssumeColonVerbOpt(true)))
+)
+
+var (
+	forward_RelationTypes_Create_0 = runtime.ForwardResponseMessage
 )
